tests/NormalTests/paczka1/fuzzy1/32295498.err
Error in line 13: A132 S719 94,3
Error in line 23: bPz1kX S719 83,0
Error in line 17: Ygx6LeJL5 S224 46,5
Error in line 24: bPz1kX S224 58,1
Error in line 31: bPz1kX A419 95,0
Error in line 7: u2azgvkr A419 3,1
Error in line 34: bPz1kX S224 9,9
